# EasyDC

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: ldap.rs  main.rs
src/handlers/: ldap_mgmt.rs
templates/: computers.html  dns.html  dns_zone.html  gpo.html  gpo_links.html  group_members.html  groups.html  ous.html  server_detail.html  users.html
