[package]
name = "EasyDC"
version = "0.1.0"
edition = "2024"

[dependencies]
#web framework 
axum = "0.7"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.5", features = ["fs", "trace"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite"] }

# LDAP & Security
ldap3 = "0.11"
bcrypt = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Environment / Config
dotenvy = "0.15"
